@@ -1,3 +1,8 @@
+Tue Dec 31 04:39:03 GMT 2002  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (man): If update is set, need_to_rerun() will always
+	  have been called already by now. Remove this redundant code.
+
 Tue Dec 31 04:26:50 GMT 2002  Colin Watson  <cjwatson@debian.org>
 
 	* man/man1/apropos.man1, man/man1/lexgrog.man1,
